--- a/cv.html
+++ b/cv.html
@@ -11,10 +11,9 @@
         <ul>
             <li>{Cyril ROMANO}</li>
             <li>19 Janv. 1990 – 30 ans</li>
-        </ul>
-            96 rue du Long Pot, 59800 Lille
-            romano.cyril@gmail.com
-            06 17 11 75 96</p>
+            <li>96 rue du Long Pot, 59800 Lille</li>
+            <li>romano.cyril@gmail.com</li>
+            <li>06 17 11 75 96</li>
     </header>
     <section>
         <h2>Formations</h2>
@@ -128,9 +127,20 @@
     </section>
     <section>
         <h2>Expériences Profesionnelles</h2>
+
     </section>
     <section>
         <h2>Centres d'intérêt</h2>
+        <ul>
+            <li>Jeux vidéo (stratégie, action et plateforme, RPG et MMORPG, Bac à sable, 4X)</li>
+            <li>Amateur de science-fiction (X-Files, Stargate, Au-Delà du Réel, Westworld ...)</li>
+            <li>Lecture du genre fantastique (Le Seigneur des Anneaux, Harry Potter, Game of Thrones ...)</li>
+            <li>Astrophysique & Cosmologie</li>
+            <li>Musique genre rock et ses variantes (Metallica, Nickelback ...)</li>
+            <li>Amateur des arts-martiaux (7 ans de pratique de l’AIKIDO)</li>
+            <li>Autoformation JAVA/JEE sur OpenClassrooms</li>
+            <li>Résolution de défi et jeux sur CodinGame</li>
+        </ul>
     </section>
 </body>
 </html>
