--- a/cv.html
+++ b/cv.html
@@ -127,7 +127,58 @@
     </section>
     <section>
         <h2>Expériences Profesionnelles</h2>
-
+        <article>
+            <h3>Quadra Informatique – ESN – 59650 Villeneuve d’Ascq</h3>
+            <p>De Juin 2018 à Oct. 2020 | 2ans 5mois | CDI</p>
+            <h4>Mission EID/Cofidis 59 650 Villeneuve d’Ascq Analyste Développeur</h4>
+            <p>De Mars 2019 à Aout 2020 | 17 mois</p>
+            <p>
+                Au sein de l’équipe Architecture de 5 personnes.
+                En charge du support aux équipes de développement, TMA (évolutive et corrective) de la console d’exploitation (gestion des traitements récurrents). Génération et livraison de l’application de gestion. Intégration continue avec Jenkins.
+            </p>
+            <p>Environnement : Windows 8, PowerBuilder 11, PL/SQL Oracle 11, Jenkins</p>
+            <h4>Centre de service – 59175 Templemars – Analyste Développeur Windev/Webdev</h4>
+            <p>De Novembre 2018 à février 2019 | 4 mois</p>
+            <p>
+                Dans une équipe de 4 personnes. Support et TMA (évolutive et corrective)
+                pour le compte de Daucy. Logiciel de gestion non propriétaire.
+            </p>
+            <p>Environnement : Windows 10, WinDev 8/WebDev 8</p>
+            <h4>Centre de service – 59175 Templemars – Analyste Développeur</h4>
+            <p>De Juin à Octobre 2018 | 5 mois</p>
+            <p>
+                Dans une équipe de 7 personnes.
+                Support et TMA (évolutive et corrective) sur les environnements, Prestashop
+                & Magento. Support hotline et analyse des défaillances.
+                Pédagogie et gestion du stress.
+            </p>
+            <p>Module : Relais Colis, Colissimo, BNP Mercanet, EBillet.</p>
+            <p>Environnement : Windows 10, PHP 7, JS, HTML, SQL, MySQL, WAMP, Prestashop 1.6/1.7, Magento 1.9</p>
+        </article>
+        <article>
+            <h3>PLAN DU NORD – 59100 Roubaix – Développeur stagiaire</h3>
+            <p>2013 Mai – Juillet | 12 semaines | Stage de fin d’étude</p>
+            <p>
+                Spécialiste du plan d’évacuation et sécurité.
+                Conception/développement de modules de gestion d'informations du PGI
+                OpenERP. (Reporting, commande, réalisation, facturation et suivi des
+                dossiers).
+                Conception/développement d'un site WEB pour la gestion d'informations.
+            </p>
+            <p>Environnement : Linux, Python, PHP 5, HTML, SQL, PosgreSQL 8</p>
+        </article>
+        <article>
+            <h3>Brindilles SA – 59000 Lille – Développeur WEB stagiaire</h3>
+            <p>2012 Mai – Juillet | 12 semaines | Stage de fin d’étude</p>
+            <p>
+                Commerce spécialisé du bio et de la puériculture écolo.
+                TMA évolutive et corrective d'un site d'e-commerce « Front-Office ».
+                Développement du « Back-Office » pour simplifier la gestion du site.
+                (Ajout de pages, Achats/Stock, Annuaire de fournisseurs, résumé de
+                l'activité, commandes …).
+            </p>
+            <p>Environnement : Linux, PHP 5, HTML, Javascript, AJAX, SQL, MySQL</p>
+        </article>
     </section>
     <section>
         <h2>Centres d'intérêt</h2>
