Ajout photo; Style CSS: color H, background color body

--- a/cv.html
+++ b/cv.html
@@ -1,197 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV ROMANO Cyril</title>
+    <style type="text/css">
+        body {
+           font-family: 'Courier New', Courier, monospace;
+           background-color: whitesmoke;
+        }
+        h1,
+        h2 {
+            color: #1F4E79;
+        }
+
+        h3,
+        h4 {
+            color: #1F7977;
+        }
+
+        h5,
+        h6 {
+            color: #4e791f;
+        }
+
+        section {
+            position: fixed;
+            width: 35%;
+            left: 50%;
+            background: white;
+            /* The Fallback */
+            /*background: rgba(255, 255, 255, 0.8);
+            margin-top: 30px;*/
+        }
+    </style>
 </head>
+
 <body>
-    <header>
-        <H1>Analyste Développeur JAVA/JEE & .NET</H1>
-        <ul>
-            <li>{Cyril ROMANO}</li>
-            <li>19 Janv. 1990 – 30 ans</li>
-            <li>96 rue du Long Pot, 59800 Lille</li>
-            <li>romano.cyril@gmail.com</li>
-            <li>06 17 11 75 96</li>
-    </header>
     <section>
-        <h2>Formations</h2>
-        <table>
-            <tr>
-                <td>
-                    <p>Déc.2020 – Aujourd’hui</p>
-                    <p>Formation Développeur JAVA/JEE (Full Stack)</p>
-                    <p>(JAVA/JEE, JPA/Hibernate, UML, AngularJS, Docker, REST)</p>
-                </td>
-                <td>
-                    <p>M2i Formation</p>
-                    <p>59650 Villeneuve d’Ascq</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Mars 2018 – Juin 2018</p>
-                    <p>Formation Développeur .NET (Full Stack)</p>
-                    <p>(CSharp, Entity, HTMl/CSS, REST, AngularJS/NodeJS)</p>
-                </td>
-                <td>
-                    <p>M2i Formation</p>
-                    <p>59650 Villeneuve d’Ascq</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>2013 / 2016</p>
-                    <p>Master Informatique</p>
-                    <p>1<sup>ère</sup> année</p>
-                </td>
-                <td>
-                    <p>Université de Lille 1</p>
-                    <p>59650 Villeneuve D’Ascq</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>2012 / 2013</p>
-                    <p>Licence Mention Informatique</p>
-                    <p>3<sup>ème</sup> année</p>
-                </td>
-                <td>
-                    <p>Université de Lille 1</p>
-                    <p>59650 Villeneuve D’Ascq</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>2009 / 2012</p>
-                    <p>D.U.T. Informatique de Gestion</p>
-                    <p>Formation professionnalisante pluridisciplinaire</p>
-                    <p>(Droit, Gestion, Analyse, BDD, Algo, COO/POO)</p>
-                </td>
-                <td>
-                    <p>IUT A, Université de Lille 1</p>
-                    <p>59650 Villeneuve D’Ascq</p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>2008 / 2009</p>
-                    <p>Baccalauréat STI Génie Mécanique</p>
-                    <p>Option micro-technique</p>
-                </td>
-                <td>
-                    <p>Lycée Jean Moulin</p>
-                    <p>08500 Revin</p>
-                </td>
-            </tr>
-        </table>
-    </section>
-    <section>
-        <h2>Compétences Techniques</h2>
-        <table>
-            <tr>
-                <td>
-                    <p>
-                        Langages de programmation
-                        JAVA/JEE, C, CSharp COBOL, PowerBuilder, SHELL/Bash, PHP, JS/ Angular
-                        Framework/Librairies
-                        .NET ADO/Linq/Entity/WPF/ASP.NET/NUnit
-                        JEE JSP/RMI/EJB/Hibernate/JUnit
-                        Java Spring
-                        JQuery, Bootstrap
-                        Principes de conception
-                        MVC, MVVM, Client-Serveur, SOAP, REST, Web-Service
-                        Analyse
-                        Merise, UML
-                        Bureautique
-                        Open Office, Word/Excel, Power Point
-                    </p>
-                </td>
-                <td>
-                    <p>
-                        Langages de Requêtage
-                        SQL, PL/SQL, AJAX
-                        Langages de Description
-                        XML, JSON, HTML
-                        BDD
-                        PostgreSQL/PgAdmin, MySQL/PhpMyAdmin, SqlServer
-                        Outils/Serveurs/Environnements
-                        Linux/Windows, Tomcat, WAMP/LAMP, Eclipse/STS, NetBeans, MS Visual Studio
-                        Langues
-                        Anglais
-                    </p>
-                </td>
-            </tr>
-        </table>
-    </section>
-    <section>
-        <h2>Expériences Profesionnelles</h2>
+        <h1>H1</h1>
+        <h2>H2</h2>
+        <h3>H3</h3>
+        <h4>H4</h4>
+        <h5>H5</h5>
+        <h6>H6</h6>
+        <header>
+            <H1>Analyste Développeur JAVA/JEE & .NET</H1>
+            <ul>
+                <li>{Cyril ROMANO}</li>
+                <li>19 Janv. 1990 – 30 ans</li>
+                <li>96 rue du Long Pot, 59800 Lille</li>
+                <li>romano.cyril@gmail.com</li>
+                <li>06 17 11 75 96</li>
+            </ul>
+            <img src="./b721265eb826b20e6f91d6643b95c122.jpg" alt="">
+        </header>
         <article>
-            <h3>Quadra Informatique – ESN – 59650 Villeneuve d’Ascq</h3>
-            <p>De Juin 2018 à Oct. 2020 | 2ans 5mois | CDI</p>
-            <h4>Mission EID/Cofidis 59 650 Villeneuve d’Ascq Analyste Développeur</h4>
-            <p>De Mars 2019 à Aout 2020 | 17 mois</p>
-            <p>
-                Au sein de l’équipe Architecture de 5 personnes.
-                En charge du support aux équipes de développement, TMA (évolutive et corrective) de la console d’exploitation (gestion des traitements récurrents). Génération et livraison de l’application de gestion. Intégration continue avec Jenkins.
-            </p>
-            <p>Environnement : Windows 8, PowerBuilder 11, PL/SQL Oracle 11, Jenkins</p>
-            <h4>Centre de service – 59175 Templemars – Analyste Développeur Windev/Webdev</h4>
-            <p>De Novembre 2018 à février 2019 | 4 mois</p>
-            <p>
-                Dans une équipe de 4 personnes. Support et TMA (évolutive et corrective)
-                pour le compte de Daucy. Logiciel de gestion non propriétaire.
-            </p>
-            <p>Environnement : Windows 10, WinDev 8/WebDev 8</p>
-            <h4>Centre de service – 59175 Templemars – Analyste Développeur</h4>
-            <p>De Juin à Octobre 2018 | 5 mois</p>
-            <p>
-                Dans une équipe de 7 personnes.
-                Support et TMA (évolutive et corrective) sur les environnements, Prestashop
-                & Magento. Support hotline et analyse des défaillances.
-                Pédagogie et gestion du stress.
-            </p>
-            <p>Module : Relais Colis, Colissimo, BNP Mercanet, EBillet.</p>
-            <p>Environnement : Windows 10, PHP 7, JS, HTML, SQL, MySQL, WAMP, Prestashop 1.6/1.7, Magento 1.9</p>
+            <h2>Formations</h2>
+            <table>
+                <tr>
+                    <td>
+                        <p>Déc.2020 – Aujourd’hui</p>
+                        <p>Formation Développeur JAVA/JEE (Full Stack)</p>
+                        <p>(JAVA/JEE, JPA/Hibernate, UML, AngularJS, Docker, REST)</p>
+                    </td>
+                    <td>
+                        <p>M2i Formation</p>
+                        <p>59650 Villeneuve d’Ascq</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Mars 2018 – Juin 2018</p>
+                        <p>Formation Développeur .NET (Full Stack)</p>
+                        <p>(CSharp, Entity, HTMl/CSS, REST, AngularJS/NodeJS)</p>
+                    </td>
+                    <td>
+                        <p>M2i Formation</p>
+                        <p>59650 Villeneuve d’Ascq</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>2013 / 2016</p>
+                        <p>Master Informatique</p>
+                        <p>1<sup>ère</sup> année</p>
+                    </td>
+                    <td>
+                        <p>Université de Lille 1</p>
+                        <p>59650 Villeneuve D’Ascq</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>2012 / 2013</p>
+                        <p>Licence Mention Informatique</p>
+                        <p>3<sup>ème</sup> année</p>
+                    </td>
+                    <td>
+                        <p>Université de Lille 1</p>
+                        <p>59650 Villeneuve D’Ascq</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>2009 / 2012</p>
+                        <p>D.U.T. Informatique de Gestion</p>
+                        <p>Formation professionnalisante pluridisciplinaire</p>
+                        <p>(Droit, Gestion, Analyse, BDD, Algo, COO/POO)</p>
+                    </td>
+                    <td>
+                        <p>IUT A, Université de Lille 1</p>
+                        <p>59650 Villeneuve D’Ascq</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>2008 / 2009</p>
+                        <p>Baccalauréat STI Génie Mécanique</p>
+                        <p>Option micro-technique</p>
+                    </td>
+                    <td>
+                        <p>Lycée Jean Moulin</p>
+                        <p>08500 Revin</p>
+                    </td>
+                </tr>
+            </table>
         </article>
         <article>
-            <h3>PLAN DU NORD – 59100 Roubaix – Développeur stagiaire</h3>
-            <p>2013 Mai – Juillet | 12 semaines | Stage de fin d’étude</p>
-            <p>
-                Spécialiste du plan d’évacuation et sécurité.
-                Conception/développement de modules de gestion d'informations du PGI
-                OpenERP. (Reporting, commande, réalisation, facturation et suivi des
-                dossiers).
-                Conception/développement d'un site WEB pour la gestion d'informations.
-            </p>
-            <p>Environnement : Linux, Python, PHP 5, HTML, SQL, PosgreSQL 8</p>
+            <h2>Compétences Techniques</h2>
+            <table>
+                <tr>
+                    <td>
+                        <p>
+                            Langages de programmation
+                            JAVA/JEE, C, CSharp COBOL, PowerBuilder, SHELL/Bash, PHP, JS/ Angular
+                            Framework/Librairies
+                            .NET ADO/Linq/Entity/WPF/ASP.NET/NUnit
+                            JEE JSP/RMI/EJB/Hibernate/JUnit
+                            Java Spring
+                            JQuery, Bootstrap
+                            Principes de conception
+                            MVC, MVVM, Client-Serveur, SOAP, REST, Web-Service
+                            Analyse
+                            Merise, UML
+                            Bureautique
+                            Open Office, Word/Excel, Power Point
+                        </p>
+                    </td>
+                    <td>
+                        <p>
+                            Langages de Requêtage
+                            SQL, PL/SQL, AJAX
+                            Langages de Description
+                            XML, JSON, HTML
+                            BDD
+                            PostgreSQL/PgAdmin, MySQL/PhpMyAdmin, SqlServer
+                            Outils/Serveurs/Environnements
+                            Linux/Windows, Tomcat, WAMP/LAMP, Eclipse/STS, NetBeans, MS Visual Studio
+                            Langues
+                            Anglais
+                        </p>
+                    </td>
+                </tr>
+            </table>
         </article>
         <article>
-            <h3>Brindilles SA – 59000 Lille – Développeur WEB stagiaire</h3>
-            <p>2012 Mai – Juillet | 12 semaines | Stage de fin d’étude</p>
-            <p>
-                Commerce spécialisé du bio et de la puériculture écolo.
-                TMA évolutive et corrective d'un site d'e-commerce « Front-Office ».
-                Développement du « Back-Office » pour simplifier la gestion du site.
-                (Ajout de pages, Achats/Stock, Annuaire de fournisseurs, résumé de
-                l'activité, commandes …).
-            </p>
-            <p>Environnement : Linux, PHP 5, HTML, Javascript, AJAX, SQL, MySQL</p>
+            <h2>Expériences Profesionnelles</h2>
+            <article>
+                <h3>Quadra Informatique – ESN – 59650 Villeneuve d’Ascq</h3>
+                <p>De Juin 2018 à Oct. 2020 | 2ans 5mois | CDI</p>
+                <h5>Mission EID/Cofidis 59 650 Villeneuve d’Ascq Analyste Développeur</h5>
+                <p>De Mars 2019 à Aout 2020 | 17 mois</p>
+                <p>
+                    Au sein de l’équipe Architecture de 5 personnes.
+                    En charge du support aux équipes de développement, TMA (évolutive et corrective) de la console
+                    d’exploitation (gestion des traitements récurrents). Génération et livraison de l’application de
+                    gestion. Intégration continue avec Jenkins.
+                </p>
+                <p>Environnement : Windows 8, PowerBuilder 11, PL/SQL Oracle 11, Jenkins</p>
+                <h5>Centre de service – 59175 Templemars – Analyste Développeur Windev/Webdev</h5>
+                <p>De Novembre 2018 à février 2019 | 4 mois</p>
+                <p>
+                    Dans une équipe de 4 personnes. Support et TMA (évolutive et corrective)
+                    pour le compte de Daucy. Logiciel de gestion non propriétaire.
+                </p>
+                <p>Environnement : Windows 10, WinDev 8/WebDev 8</p>
+                <h5>Centre de service – 59175 Templemars – Analyste Développeur</h5>
+                <p>De Juin à Octobre 2018 | 5 mois</p>
+                <p>
+                    Dans une équipe de 7 personnes.
+                    Support et TMA (évolutive et corrective) sur les environnements, Prestashop
+                    & Magento. Support hotline et analyse des défaillances.
+                    Pédagogie et gestion du stress.
+                </p>
+                <p>Module : Relais Colis, Colissimo, BNP Mercanet, EBillet.</p>
+                <p>Environnement : Windows 10, PHP 7, JS, HTML, SQL, MySQL, WAMP, Prestashop 1.6/1.7, Magento 1.9</p>
+            </article>
+            <article>
+                <h3>PLAN DU NORD – 59100 Roubaix – Développeur stagiaire</h3>
+                <p>2013 Mai – Juillet | 12 semaines | Stage de fin d’étude</p>
+                <p>
+                    Spécialiste du plan d’évacuation et sécurité.
+                    Conception/développement de modules de gestion d'informations du PGI
+                    OpenERP. (Reporting, commande, réalisation, facturation et suivi des
+                    dossiers).
+                    Conception/développement d'un site WEB pour la gestion d'informations.
+                </p>
+                <p>Environnement : Linux, Python, PHP 5, HTML, SQL, PosgreSQL 8</p>
+            </article>
+            <article>
+                <h3>Brindilles SA – 59000 Lille – Développeur WEB stagiaire</h3>
+                <p>2012 Mai – Juillet | 12 semaines | Stage de fin d’étude</p>
+                <p>
+                    Commerce spécialisé du bio et de la puériculture écolo.
+                    TMA évolutive et corrective d'un site d'e-commerce « Front-Office ».
+                    Développement du « Back-Office » pour simplifier la gestion du site.
+                    (Ajout de pages, Achats/Stock, Annuaire de fournisseurs, résumé de
+                    l'activité, commandes …).
+                </p>
+                <p>Environnement : Linux, PHP 5, HTML, Javascript, AJAX, SQL, MySQL</p>
+            </article>
         </article>
-    </section>
-    <section>
-        <h2>Centres d'intérêt</h2>
-        <ul>
-            <li>Jeux vidéo (stratégie, action et plateforme, RPG et MMORPG, Bac à sable, 4X)</li>
-            <li>Amateur de science-fiction (X-Files, Stargate, Au-Delà du Réel, Westworld ...)</li>
-            <li>Lecture du genre fantastique (Le Seigneur des Anneaux, Harry Potter, Game of Thrones ...)</li>
-            <li>Astrophysique & Cosmologie</li>
-            <li>Musique genre rock et ses variantes (Metallica, Nickelback ...)</li>
-            <li>Amateur des arts-martiaux (7 ans de pratique de l’AIKIDO)</li>
-            <li>Autoformation JAVA/JEE sur OpenClassrooms</li>
-            <li>Résolution de défi et jeux sur CodinGame</li>
-        </ul>
+        <article>
+            <h2>Centres d'intérêt</h2>
+            <ul>
+                <li>Jeux vidéo (stratégie, action et plateforme, RPG et MMORPG, Bac à sable, 4X)</li>
+                <li>Amateur de science-fiction (X-Files, Stargate, Au-Delà du Réel, Westworld ...)</li>
+                <li>Lecture du genre fantastique (Le Seigneur des Anneaux, Harry Potter, Game of Thrones ...)</li>
+                <li>Astrophysique & Cosmologie</li>
+                <li>Musique genre rock et ses variantes (Metallica, Nickelback ...)</li>
+                <li>Amateur des arts-martiaux (7 ans de pratique de l’AIKIDO)</li>
+                <li>Autoformation JAVA/JEE sur OpenClassrooms</li>
+                <li>Résolution de défi et jeux sur CodinGame</li>
+            </ul>
+        </article>
     </section>
 </body>
+
 </html>
